force-app/main/default/objects/Contract_Associates__c/Contract_Associates__c.object-meta.xml
<CustomObject>
    <description>Used for Contract Management. Allows users to specify multiple Contacts (people) related to a Contract, such as Signers.</description>
    <label>Contract Associates</label>
    <nameField>
        <displayFormat>CNA-{000000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Associates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>