force-app/main/default/objects/Contract_Associates__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <formula>Contact__r.Fax</formula>
    <label>Fax</label>
    <type>Text</type>
</CustomField>