force-app/main/default/objects/Contract_Associates__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract Signer</fullName>
            </value>
            <value>
                <fullName>Contract Contact</fullName>
            </value>
            <value>
                <fullName>Contract Contact / Signer</fullName>
            </value>
            <value>
                <fullName>Invoice Contact</fullName>
            </value>
            <value>
                <fullName>Panic Button Contact (Primary)</fullName>
            </value>
            <value>
                <fullName>Panic Button Contact (Secondary)</fullName>
            </value>
            <value>
                <fullName>Shipping Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>