force-app/main/default/objects/Contract_Associates__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <formula>Contact__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State/Province</label>
    <type>Text</type>
</CustomField>