force-app/main/default/objects/Contract_Associates__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <formula>Contact__r.MailingStreet</formula>
    <label>Street Address</label>
    <type>Text</type>
</CustomField>