force-app/main/default/objects/Contract_Associates__c/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <formula>Contact__r.MailingPostalCode</formula>
    <label>Zip/Postal Code</label>
    <type>Text</type>
</CustomField>